<resources>
    <string name="app_name">StudentApplication</string>
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_notif">Notif</string>
    <string name="bottom_navigation_menu_tinder">Tinder</string>
    <string name="bottom_navigation_menu_event">Home</string>
    <string name="bottom_navigation_menu_profile">Profile</string>


    <string name="login_title">Page de connexion</string>
    <string name="login_identifier">Numéros / Email</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_validate">Connexion</string>
    <string name="login_register">S\'inscrire</string>
    <string name="login_newUser">Tu n\'es toujours pas inscrit ?</string>


    <string name="register_title">Page d\'inscription</string>
    <string name="register_identifier">Email</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_password_again">Confirmer mot de passe</string>
    <string name="register_validate">Valider</string>
    <string name="register_name">Nom</string>
    <string name="register_surname">Prénom</string>
    <string name="register_birthDate">Date de naissance</string>
    <string name="register_school">Votre école</string>
    <string name="register_city">Votre ville</string>
    <string name="register_interest">Vos centre d\'intérêts</string>
    <string name="register_skip">Passer cette étape</string>
    <string name="register_why_interest">Aidez nous à vous proposer des événements adapté à vos préférences en répondant à quelques questions.</string>

    <string name="add_cover">+ Photo</string>
    <string name="event_name">Titre de l\'événement </string>
    <string name="event_place">Lieu de l\'événement</string>

    <string name="event_start_date">Date de début</string>
    <string name="event_end_date">Date de fin</string>
    <string name="event_start_h">Heure de début</string>
    <string name="event_end_h">Heure de fin</string>

    <string name="description">Description :</string>
    <string name="style_music">Style de musique :</string>

    <string name="text_long">Style de Feds wanna tap up man and wire up man like Chubbs did Detail
    Back when Ricky was doin up Teesdale, I was doin dinner with Teezy
    I didnt trust no one, so I know a lot of niggas got too greazy
    Niko never move neeky, sweatsuit Nike, sweatsuit DGStyle de Feds wanna tap up man and wire up man like Chubbs did Detail
    Back when Ricky was doin up Teesdale, I was doin dinner with Teezy
    I didnt trust no one, so I know a lot of niggas got too greazy
    Niko never move neeky, sweatsuit Nike, sweatsuit DGStyle de Feds wanna tap up man and wire up man like Chubbs did Detail
    Back when Ricky was doin up Teesdale, I was doin dinner with Teezy
    I didnt trust no one, so I know a lot of niggas got too greazy Niko never move neeky, sweatsuit Nike, sweatsuit DGStyle de Feds wanna tap up man and wire up man like Chubbs did Detail
    Back when Ricky was doin up Teesdale, I was doin dinner with Teezy
    I didnt trust no one, so I know a lot of niggas got too greazy
    Niko never move neeky, sweatsuit Nike, sweatsuit DG</string>


    <string name="profile_title">Mon Profil</string>


    <string name="frag_two">Fragment 2</string>
    <string name="frag_one">Fragment 1</string>
    <string name="life_cycle">Cycle de Vie</string>
    <string name="stat_activity">Etat activité</string>
    <string name="frag_change">Changer de fragment</string>
    <string name="passed_events">Vos événements passés</string>
    <string name="notifications">Notifications</string>
    <string name="pseudo">Choisissez un pseudo</string>
    <string name="surname_name">Prénom Nom</string>
    <string name="my_school">Mon école</string>
    <string name="my_city">Ma pur Ville</string>
    <string name="birth_date">Date de naissance</string>
    <string name="places">Places</string>
    <string name="swipe">Swipe</string>
    <string name="chose_badge">Choisissez un badge pour </string>

    <string name="music_rap">Rap</string>
    <string name="music_pop">Pop</string>
    <string name="music_trans">Trans</string>
    <string name="music_house">House</string>
    <string name="music_techno">Techno</string>
    <string name="music_hard">Hard</string>
    <string name="music_rnb">Rnb</string>
    <string name="create_the_event">Créer l\'event</string>
    <string name="add">Ajouter</string>
    <string name="filtre_name">Filtre Name</string>
    <string name="city_event">Ville de l\'event</string>
    <string name="school_event">Ecole(s)</string>
    <string name="event_ticket">Nb places</string>
    <string name="edit_school">Choisissez un école</string>
    <string name="edit_city">Choisissez une ville</string>
    <string name="intro">Bienvenue dans Student App ! \n
        Ici vous allez découvrir un réseau social exclusivement réservé aux etudiants ! \n
        Créez des Evenements a théme libre ! Qu\'ils soient Public ou Privé \n
        Recherchez des soirées selon vos propres critères, mais ne buvez pas trop \n
        Matchez avec les participants de vos soirées passé dans votre espace Swipe ! \n
        Et encore bien plus avec Student App ! </string>

    <string name="filter_assos">Associations</string>
    <string name="filter_city">Ville</string>
    <string name="filter_school">Ecole</string>
    <string name="filter_music">Musique</string>
    <string name="filter_etudiants">Etudiants</string>




</resources>
